tests/tooling/fixtures/native/recovery/positive/message_send_direct_nil_receiver_elision.objc3
// Positive fixture: direct nil receiver message-send is compile-time elided to zero without runtime dispatch.
module MessageSendDirectNilReceiverElision;

fn main() {
  let sent = [nil ping];
  return sent + 9;
}
