tests/tooling/fixtures/native/recovery/negative/negative_nil_literal_lexer_unexpected_character.objc3
// Expected diagnostic code(s): O3L001.
@module NegativeNilLiteralLexerUnexpectedCharacter;

fn main() -> i32 {
  let seed = nil;
  return seed;
}
